--- a/css/main.css
+++ b/css/main.css
@@ -146,6 +146,9 @@ a {
   /* Restrict the maximum width of the .main-block to 1200px,
   then ensure that block is centered within the layout */
   /* Hint: how do you center a block element? */
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .main-section {
@@ -215,12 +218,14 @@ a {
     /* TODO 1 */
     /* 2 column template! (1 fraction each) */
     /* Use this as a reminder of the syntax:
-      https://codepen.io/roccop/pen/WLQJXY?editors=1100
-    */
+      https://codepen.io/roccop/pen/WLQJXY?editors=1100*/
+    grid-template-columns: 1fr 1fr;
+
     /* TODO 5 */
-    /* set a grid-gap of 1em 
+    /* set a grid-gap of 1em
     and make sure to remove the margin on each .lesson
     to get an evenly spaced layout. */
+    grid-gap: 1em;
   }
 
 }
@@ -242,11 +247,32 @@ a {
 
   .main-block {
     width: 880px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto auto;
+  }
+
+  .main-header {
+    grid-column: 1/3;
+  }
+
+  /* .main-section {
+    grid-column: 1/3;
+  } */
+
+  .primary-headings {
+    grid-column: 1/3;
+  }
+
+  #lessons {
+    grid-column: 1/3;
   }
 
   .lessons-grid {
     /* TODO 2 */
     /* 4 column template! (1 fraction each) */
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+
   }
 
   /* TODO 4 */
@@ -260,7 +286,5 @@ a {
   --------------------------- */
   /* Hint: Don't think about shrinking the last two elements into the single column,
   but instead think about stretching the first two across the template. */
-
-
 
 }
